# qt_random_stuff

./: .gitignore
QNotePad/: CMakeLists.txt  Resource.qrc  mainwindow.ui
SerialPortTest/: CMakeLists.txt  image_resources.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
TextFinder/: CMakeLists.txt  input.txt  textfinder.cpp  textfinder.ui
hello_console_qt/: CMakeLists.txt  main.cpp
hello_moc_signals_slots/: CMakeLists.txt  hellomoc.cpp  hellomoc.h  main.cpp
hello_qt_widgets/: CMakeLists.txt  mainwindow.ui
mouse_ui/: CMakeLists.txt  mainwindow.ui
qt_quick_application/: CMakeLists.txt  main.cpp  main.qml
